--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# Hibernate setting to update table for us
+spring.jpa.hibernate.ddl-auto=update
 
+# PostgreSQL datasource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=m1m2m3m4m5m6
+# Specify the default schema for your application
+spring.datasource.schema=questappSCH
+
+spring.datasource.driver-class-name=org.postgresql.Driver
