--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # Hibernate setting to update table for us
 spring.jpa.hibernate.ddl-auto=update
 
+#spring.security.user.name=postgres
+#spring.security.user.password=m1m2m3m4m5m6
+
 # PostgreSQL datasource configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
